<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rule_contain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/line_color">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/seekhelp_define_area"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/area_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/edit_area"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/seekhelp_define_area_all"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/edit_area"
            android:layout_toStartOf="@+id/area_m"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:hint="@string/seekhelp_area"
            android:inputType="number"/>

        <TextView
            android:id="@+id/area_m"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/seekhelp_define_area_m"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekhelp_customize_sex"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:layout_marginStart="20dp"/>

        <RadioGroup
            android:id="@+id/sex"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/sex_text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seekhelp_customize_man"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:button="@drawable/radio_button_style"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/seekhelp_customize_woman"
                android:button="@drawable/radio_button_style"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/seekhelp_customize_all"
                android:button="@drawable/radio_button_style"/>
        </RadioGroup>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/seekhelp_define_date"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/seekhelp_area"
            android:inputType="number"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/seekhelp_define_date"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/seekhelp_area"
            android:inputType="number"/>

    </RelativeLayout>

</LinearLayout>
