<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/back"
            android:layout_marginStart="15dp"
            android:layout_alignTop="@+id/help_title" />

        <TextView
            android:id="@+id/help_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/common_about_title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="544dp"
        android:src="@drawable/u" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_about_name"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_about_description"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_about_communication"
            android:textSize="15sp"
            android:gravity="bottom"
            android:textColor="#03A9F4"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</LinearLayout>
