<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/line_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_cancel"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekhelp_help_content"
            android:layout_alignTop="@+id/cancel"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_submit"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignTop="@+id/cancel"
            android:textSize="15sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/edit_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <EditText
                    android:id="@+id/edit_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:lines="4"
                    android:textSize="15sp"
                    android:hint="@string/seekhelp_help_content_edit"/>

            </RelativeLayout>

        </LinearLayout>
</LinearLayout>
