<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/forget_block"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="45dp"
    android:layout_marginTop="29dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:background="@null"
        android:textColorHint="@color/white"
        android:hint="@string/login_pwd_again"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <ViewStub
        android:id="@+id/alarm_point"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout="@layout/login_red_point"/>

    <EditText
        android:id="@+id/vertify"
        android:layout_below="@+id/pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_toStartOf="@+id/send_vertify"
        android:hint="@string/login_vertify" />

    <TextView
        android:id="@+id/send_vertify"
        android:layout_alignTop="@+id/vertify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/login_send_vertify"
        android:layout_alignParentEnd="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/login_vertify_background"/>
</RelativeLayout>

